--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<img src="http://i.imgur.com/YxvAGkG.webm" alt="webpage coming soon">
+<iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed"></iframe>
 </body>
 </html>
