--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-bgcolor="#424242"
+<body bgcolor="#424242">
 <iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed"></iframe>
 </body>
 </html>
