--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed"></iframe>
+<center>There will be a webpage here soon</center>
 </body>
 </html>
