--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
+  <head>
+    <style>
+      #logo{
+        background-color:#808284;
+      }
+    </style>
+    
+  </head>
 <body>
+  <div id="logo"><img src="http://i.imgur.com/0STSgvP.png"></div>
 <iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed"></iframe>
 <center>There will be a webpage here soon</center>
 </body>
