--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
   </head>
 <body>
-  <div id="logo"><img src="http://i.imgur.com/0STSgvP.png"></div>
+  <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
 <iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed"></iframe>
 <center>There will be a webpage here soon</center>
 </body>
