--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       #logo{
         background-color:#808284;
         display:block;
-        margin:0px;
+        margin:0px 0px 40px;
       }
     </style>
     
