--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         display:block;
         margin:0px 0px 40px;
       }
+      body{
+        margin:0;
+      }
     </style>
     
   </head>
