--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <style>
       #logo{
         background-color:#808284;
@@ -8,13 +9,14 @@
       }
       body{
         margin:0;
+        font-family: 'Orbitron', sans-serif;
       }
     </style>
     
   </head>
 <body>
   <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
-<iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed"></iframe>
+<iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed" style="margin-bottom:30px;"></iframe>
 <center>There will be a webpage here soon</center>
 </body>
 </html>
