--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <body>
   <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
 <iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed" style="margin-bottom:30px;"></iframe>
-<center>There will be a webpage here soon</center>
+<center><h2>There will be a webpage here soon</h2></center>
 </body>
 </html>
