--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         margin:0;
         font-family: 'Orbitron', sans-serif;
       }
+      h2{
+        font-weight:normal;
+      }
     </style>
     
   </head>
