--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 <body>
   <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
-<iframe class="imgur-embed" width="100%" height="504" frameborder="0" src="http://i.imgur.com/YxvAGkG.gifv#embed" style="margin-bottom:30px;"></iframe>
+<blockquote class="imgur-embed-pub" lang="en" data-id="YxvAGkG"><a href="//imgur.com/YxvAGkG">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 <center><h2>There will be a webpage here soon</h2></center>
 </body>
 </html>
