--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </head>
 <body>
   <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
-<blockquote class="imgur-embed-pub" lang="en" data-id="YxvAGkG"><a href="//imgur.com/YxvAGkG">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<video autoplay loop poster="placeholder.jpg" id="backgroundgif">
+    <source src="http://i.imgur.com/wusYXgK.webm" type="video/webm">
+</video>
 <center><h2>There will be a webpage here soon</h2></center>
 </body>
 </html>
