--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
     
   </head>
 <body>
-  <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
+  <div id="logo"><img src="http://i.imgur.com/YxvAGkG.mp4" height="504"></div>
 <video autoplay loop poster="placeholder.jpg" id="backgroundgif">
     <source src="http://i.imgur.com/wusYXgK.webm" type="video/webm">
 </video>
+  <style>
+    video#backgroundgif {
+    position: fixed; right: 0; bottom: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: -100;
+}
+  </style>
 <center><h2>There will be a webpage here soon</h2></center>
 </body>
 </html>
