maybe now works?
now maybe

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     
   </head>
 <body>
-  <div id="logo"><img src="http://i.imgur.com/YxvAGkG.mp4" height="504"></div>
+  <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
 <video autoplay loop poster="placeholder.jpg" id="backgroundgif">
-    <source src="http://i.imgur.com/wusYXgK.webm" type="video/webm">
+    <source src="http://i.imgur.com/YxvAGkG.mp4" type="video/webm">
 </video>
   <style>
     video#backgroundgif {
