--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       body{
         margin:0;
         font-family: 'Orbitron', sans-serif;
+        font-color: white;
       }
       h2{
         font-weight:normal;
