--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </video>
   <style>
     video#backgroundgif {
-    position: fixed; right: 0; bottom: fixed;
+    position: -40; right: 0; bottom: fixed;
     min-width: 100%; min-height: 100%;
     width: auto; height: auto; z-index: -100;
 }
