--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       h2{
         font-weight:normal;
         color:white;
+        text-shadow: 2px 2px 7px rgba(150, 150, 150, 0.79);
       }
     </style>
     
