--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 }
   </style>
 <center><h2>There will be a webpage here soon</h2></center>
+  <center><h4>for any inquiries: mail@vertexial.com</h4></center>
 </body>
 </html>
