--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         color:white;
         text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.77);
       }
+      h4{
+        font-weight:normal;
+        color:white;
+        text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.77);
+      }
     </style>
     
   </head>
