--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
 <video autoplay loop poster="placeholder.jpg" id="backgroundgif">
-    <source src="http://i.imgur.com/YxvAGkG.mp4" type="video/webm">
+    <source src="https://zippy.gfycat.com/RecklessMealyAmericantoad.webm" type="video/webm">
 </video>
   <style>
     video#backgroundgif {
