--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </head>
 <body>
   <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
-<video autoplay loop poster="placeholder.jpg" id="backgroundgif">
-    <source src="https://zippy.gfycat.com/RecklessMealyAmericantoad.webm" type="video/webm">
+<video autoplay loop id="backgroundgif">
+    <source src="https://gfycat.com/RecklessMealyAmericantoad" type="video/webm">
 </video>
   <style>
     video#backgroundgif {
