--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     video#backgroundgif {
     position: fixed; right: 0; bottom:  -200;
     min-width: 100%; min-height: 100%;
-    width: auto; height: auto; z-index: -100;
+    width: auto; height: auto;
 }
   </style>
 <center><h2>There will be a webpage here soon</h2></center>
