--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
     <source src="https://gfycat.com/RecklessMealyAmericantoad" type="video/webm">
 </video>
   <style>
-    video#backgroundgif {
-    position: fixed; right: 0; bottom:  -200;
-    min-width: 100%; min-height: 100%;
-    width: auto; height: auto; z-index: -100;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(polina.jpg) no-repeat;
+    background-size: cover; 
 }
   </style>
 <center><h2>There will be a webpage here soon</h2></center>
