--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 }
   </style>  
 <div id="container">
-<center><h2>There will be a webpage here soon</h2></center>
+<center><h2>3D design and game design</h2></center>
   <center><h4>for any inquiries: mail@vertexial.com</h4></center>
 </div>
 </body>
