--- a/index.html
+++ b/index.html
@@ -1,51 +1,46 @@
 <html>
-  <head>
-    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-    <style>
-      #logo{
-        background-color:#808284;
-        display:block;
-        margin:0px 0px 0px;
-        box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.77)
-      }
-      body{
-        margin:0;
-        font-family: 'Orbitron', sans-serif;
-      }
-      h2{
-        font-weight:normal;
-        color:white;
-        text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.77);
-      }
-      h4{
-        font-weight:normal;
-        color:white;
-        text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.77);
-      }
-      #container{
-        margin-top: 40;
-      }
-    </style>
-    
-  </head>
+
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet"> </head>
+
 <body>
 
-  <div id="logo"><img src="http://i.imgur.com/0STSgvP.png" height="200"></div>
 
-    <video autoPlay loop muted id="backgroundgif">
-    <source src="https://fat.gfycat.com/BigShowyFallowdeer.webm" type="video/webm">
-</video>
-  <style>
-    #backgroundgif {
-    position: fixed; right: 50%; top:  50%;
-    transform: translate(50%, -50%);
-    min-width: 100%; min-height: 100%;
-    width: auto; height: auto; z-index: -100;
-}
-  </style>  
-<div id="container">
-<center><h2>3D design and game design</h2></center>
-  <center><h4>for any inquiries: mail@vertexial.com</h4></center>
-</div>
+
+  <div class="parent">
+    <div class="top">
+      <div class="logo"><img src="img/Vertexial Logo.svg">
+        <h1>vertexial</h1>
+      </div>
+    </div>
+    <div class="bottom">
+      <div id="container">
+
+          
+          <h2>Richard Sööt - 3D design and game design</h2>
+
+          <h4>for any inquiries: <a href="mailto:mail@vertexial.com">mail@vertexial.com</a></h4>
+
+      </div>
+      <div class="buttons">
+        <a href="https://ricardium.artstation.com/"><div class="button"><img src="img/artstation.png">
+          <p>Artstation</p>
+        </div></a>
+        <a href="https://ricardium.itch.io/"><div class="button"><img src="img\itchio.svg">
+          <p>Itch.io</p>
+        </div></a>
+        <a href="https://www.linkedin.com/in/richardsoot/"><div class="button"><img src="img\linkedin.png">
+          <p>LinkedIn</p>
+        </div></a>
+
+      </div>
+    </div>
+  </div>
+
+
 </body>
+
 </html>
